credit route added, swagger updated
